Adiciona imagem ao projeto e atualiza index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Bem-vindo ao meu projeto!</h1>
     <p>Este é um exemplo básico de página HTML.</p>
+<img src="images/sua-imagem.jpg" alt="Descrição da imagem" />
+
 </body>
 </html>
 
